# business-card

./: .dummy  .gitignore  COMPARISON.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  MIGRATION.md  README.md  config.json  config.schema.json  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: publish_crate.yml  release-npm.yml  release-pypi.yml  release.yml  release_npm.yml  release_pypi.yml  sync_resume.yml
python/: README.md  pyproject.toml
python/src/carlosferreyra/: actions.py  card.py  config.json  config.py  menu.py
scripts/: release_npm.ts  release_pypi.py  sync_resume.py
src/: main.rs
typescript/: README.md  package-lock.json  package.json
typescript/src/: actions.ts  card.ts  config.ts  index.ts  menu.ts  utils.ts
